react-native-video

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -33,7 +33,7 @@ target 'ss' do
   pod 'DoubleConversion', :podspec => '../node_modules/react-native/third-party-podspecs/DoubleConversion.podspec'
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
-
+  pod 'react-native-video', :path => '../node_modules/react-native-video/react-native-video.podspec'
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
   
   target 'ssTests' do
