--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -179,6 +179,8 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-video')
+    implementation "androidx.appcompat:appcompat:1.0.0"
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
     apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
