--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-native-svg-charts": "^5.3.0",
     "react-native-touch-id": "^4.4.1",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-video": "^5.0.2",
+    "react-native-video-controls": "^2.2.3",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
     "react-navigation-stack": "^1.10.3",
