--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.0",
     "native-base": "^2.13.8",
     "prop-types": "^15.7.2",
+    "query-string": "^6.9.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-extended-stylesheet": "^0.12.0",
