--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.3",
+    "@react-native-community/blur": "^3.4.1",
     "axios": "^0.19.0",
     "native-base": "^2.13.8",
     "prop-types": "^15.7.2",
     "query-string": "^6.9.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-elements": "^1.2.7",
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-gesture-handler": "^1.5.2",
     "react-native-reanimated": "^1.4.0",
