--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-elements": "^1.2.7",
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-gesture-handler": "^1.5.2",
+    "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-reanimated": "^1.4.0",
     "react-native-svg": "^9.13.3",
     "react-native-svg-charts": "^5.3.0",
