--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -182,6 +182,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-linear-gradient')
     implementation project(':react-native-video')
     implementation "androidx.appcompat:appcompat:1.0.0"
     implementation fileTree(dir: "libs", include: ["*.jar"])
