--- a/ios/Podfile
+++ b/ios/Podfile
@@ -38,6 +38,8 @@ target 'ss' do
   
   pod 'react-native-blur', :path => '../node_modules/@react-native-community/blur'
 
+  pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
+
   target 'ssTests' do
     inherit! :search_paths
     # Pods for testing
