--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-gesture-handler": "^1.5.2",
     "react-native-image-picker": "^1.1.0",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-reanimated": "^1.4.0",
     "react-native-svg": "^9.13.3",
