--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-elements": "^1.2.7",
+    "react-native-elevated-view": "0.0.6",
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-gesture-handler": "^1.5.2",
     "react-native-image-picker": "^1.1.0",
