--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-navigation-tabs": "^2.6.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "rn-sliding-up-panel": "^2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.4",
