--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/art": "^1.0.3",
     "@react-native-community/async-storage": "^1.6.3",
     "@react-native-community/blur": "^3.4.1",
     "axios": "^0.19.0",
@@ -18,6 +19,7 @@
     "query-string": "^6.9.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-chart-kit": "^4.2.0",
     "react-native-elements": "^1.2.7",
     "react-native-elevated-view": "0.0.6",
     "react-native-extended-stylesheet": "^0.12.0",
@@ -25,6 +27,7 @@
     "react-native-image-picker": "^1.1.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-loading-spinner-overlay": "^1.0.1",
+    "react-native-progress": "^4.0.2",
     "react-native-reanimated": "^1.4.0",
     "react-native-svg": "^9.13.3",
     "react-native-svg-charts": "^5.3.0",
