--- a/android/app/src/debug/AndroidManifest.xml
+++ b/android/app/src/debug/AndroidManifest.xml
@@ -3,6 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
-
-    <application android:usesCleartextTraffic="true" tools:targetApi="28" tools:ignore="GoogleAppIndexingWarning" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> 
+    <application android:usesCleartextTraffic="true" tools:targetApi="28" tools:ignore="GoogleAppIndexingWarning" >
+        <meta-data
+        android:name="com.google.android.geo.API_KEY"
+        android:value="AIzaSyCLGr7dYcyHvC5iPhh1Ue9wkZYLK2IZdXo"/>
+    </application>
 </manifest>
