--- a/package.json
+++ b/package.json
@@ -20,16 +20,19 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-chart-kit": "^4.2.0",
+    "react-native-circular-progress": "^1.3.4",
     "react-native-elements": "^1.2.7",
     "react-native-elevated-view": "0.0.6",
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-gesture-handler": "^1.5.2",
+    "react-native-hr": "^1.1.4",
+    "react-native-hr-component": "^2.0.3",
     "react-native-image-picker": "^1.1.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-progress": "^4.0.2",
     "react-native-reanimated": "^1.4.0",
-    "react-native-svg": "^9.13.3",
+    "react-native-svg": "^9.13.6",
     "react-native-svg-charts": "^5.3.0",
     "react-native-touch-id": "^4.4.1",
     "react-native-vector-icons": "^6.6.0",
