--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@dudigital/react-native-zoomable-view": "^1.0.15",
     "@react-native-community/art": "^1.0.3",
     "@react-native-community/async-storage": "^1.6.3",
     "@react-native-community/blur": "^3.4.1",
@@ -30,6 +31,7 @@
     "react-native-hr": "^1.1.4",
     "react-native-hr-component": "^2.0.3",
     "react-native-image-picker": "^1.1.0",
+    "react-native-lightbox": "^0.8.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-maps": "0.26.1",
