--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-community/blur": "^3.4.1",
     "@react-native-community/geolocation": "^1.4.2",
     "axios": "^0.19.0",
+    "geolib": "^3.2.0",
     "native-base": "^2.13.8",
     "prop-types": "^15.7.2",
     "query-string": "^6.9.0",
