--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "query-string": "^6.9.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-camera": "^3.15.0",
     "react-native-chart-kit": "^4.2.0",
     "react-native-circular-progress": "^1.3.4",
     "react-native-elements": "^1.2.7",
@@ -31,6 +32,7 @@
     "react-native-gesture-handler": "^1.5.2",
     "react-native-hr": "^1.1.4",
     "react-native-hr-component": "^2.0.3",
+    "react-native-image-marker": "^0.6.1",
     "react-native-image-picker": "^1.1.0",
     "react-native-lightbox": "^0.8.1",
     "react-native-linear-gradient": "^2.5.6",
