--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-community/geolocation": "^1.4.2",
     "axios": "^0.19.0",
     "geolib": "^3.2.0",
+    "moment": "^2.24.0",
     "native-base": "^2.13.8",
     "prop-types": "^15.7.2",
     "query-string": "^6.9.0",
@@ -38,6 +39,9 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-maps": "0.26.1",
+    "react-native-material-dropdown": "^0.11.1",
+    "react-native-modal": "^11.5.3",
+    "react-native-popup-dialog": "^0.18.3",
     "react-native-progress": "^4.0.2",
     "react-native-reanimated": "^1.4.0",
     "react-native-svg": "^9.13.6",
