--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-elements": "^1.2.7",
     "react-native-elevated-view": "0.0.6",
     "react-native-extended-stylesheet": "^0.12.0",
+    "react-native-geocoding": "^0.4.0",
     "react-native-geolocation-service": "^3.1.0",
     "react-native-gesture-handler": "^1.5.2",
     "react-native-hr": "^1.1.4",
