--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-camera": "^3.15.0",
     "react-native-chart-kit": "^4.2.0",
     "react-native-circular-progress": "^1.3.4",
+    "react-native-dialog": "^5.6.0",
     "react-native-elements": "^1.2.7",
     "react-native-elevated-view": "0.0.6",
     "react-native-extended-stylesheet": "^0.12.0",
