--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-gesture-handler": "^1.5.2",
     "react-native-hr": "^1.1.4",
     "react-native-hr-component": "^2.0.3",
+    "react-native-image-base64": "^0.1.4",
     "react-native-image-marker": "^0.6.1",
     "react-native-image-picker": "^1.1.0",
     "react-native-lightbox": "^0.8.1",
